--- a/src/ParrotLayout/style.scss
+++ b/src/ParrotLayout/style.scss
@@ -51,6 +51,7 @@ body {
 }
 
 .main {
+  overflow: hidden;
   box-sizing: border-box;
 
   padding-top: 14rem;
